--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docker/swagger-ui"]
 	path = docker/swagger-ui
 	url = https://github.com/swagger-api/swagger-ui
+[submodule "docker/openapi-generator"]
+	path = docker/openapi-generator
+	url = git@github.com:OpenAPITools/openapi-generator.git
