fixed to be able to generate for now

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,4 +11,5 @@ services:
       context: docker/openapi-generator
       dockerfile: Dockerfile
     volumes:
-      - ./target:/usr/src/app/modules/openapi-generator-cli/target
+      - ./openapi:/openapi # input
+      - ./gen:/gen         # output
