--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,3 +25,10 @@ services:
       - ./gen/service1/openapi:/usr/share/nginx/html/openapi/
     environment:
       SPEC_URL: openapi/openapi.yaml
+  prism:
+    image: stoplight/prism:latest
+    ports:
+      - "8082:4010"
+    command: mock -h 0.0.0.0 /openapi.yaml
+    volumes:
+      - ./gen/service1/openapi/openapi.yaml:/openapi.yaml
