add server setting

--- a/openapi/service1/main.yaml
+++ b/openapi/service1/main.yaml
@@ -3,6 +3,8 @@ openapi: 3.0.1
 info:
   title: Service1 API
   version: 1.0.0
+servers:
+  - url: http://localhost:8082
 paths:
   /user:
     $ref: './paths/user.yaml'
