--- a/openapi/service1/components/schemas/User.yaml
+++ b/openapi/service1/components/schemas/User.yaml
@@ -12,6 +12,7 @@ properties:
   email:
     type: string
     format: email
+    example: sample@example.com
   password:
     type: string
   phone:
