--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       - ./openapi:/openapi # input
       - ./gen:/gen         # output
   redoc:
-    image: redocly/redoc:latest
+    image: redocly/redoc:v2.1.4
     ports:
       - "8081:80"
     volumes:
@@ -26,7 +26,7 @@ services:
     environment:
       SPEC_URL: openapi/openapi.yaml
   prism:
-    image: stoplight/prism:latest
+    image: stoplight/prism:5
     ports:
       - "8082:4010"
     command: mock -h 0.0.0.0 /openapi.yaml
